# MAGI

./: .gitignore  GEMINI.md  PLAN.md  README.md  balthasar.modelfile  casper.modelfile  install.bat  install.sh  magi_system.py  main.py  melchior.modelfile  pyproject.toml
magi/: config.py  magi_system.py  main.py  orchestrator.py  ui_layouts.py
magi_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
